[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/icecube.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/JosefinSans-Light.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 46
extra_spacing_top = 5
extra_spacing_char = 4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.145098, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 512.0
margin_bottom = 576.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 64.0
alignment = 1

[node name="Logo" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 166.0
margin_bottom = 64.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 170.0
margin_right = 409.0
margin_bottom = 64.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 6.0
margin_right = 239.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.721569, 0.960784, 0.960784, 1 )
text = " Ice Cubes"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 512.0
margin_bottom = 576.0
size_flags_vertical = 3

[node name="ButtonList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 178.0
margin_top = 170.0
margin_right = 334.0
margin_bottom = 338.0

[node name="ContinueButton" type="ToolButton" parent="MarginContainer/VBoxContainer/CenterContainer/ButtonList"]
margin_right = 156.0
margin_bottom = 39.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.172549, 0.203922, 0.309804, 1 )
custom_colors/font_color = Color( 0.721569, 0.960784, 0.960784, 1 )
custom_colors/font_color_hover = Color( 0.870588, 1, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 0.0745098, 0.329412, 0.235294, 1 )
disabled = true
enabled_focus_mode = 0
text = "Continue"

[node name="NewGameButton" type="ToolButton" parent="MarginContainer/VBoxContainer/CenterContainer/ButtonList"]
margin_top = 43.0
margin_right = 156.0
margin_bottom = 82.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.172549, 0.203922, 0.309804, 1 )
custom_colors/font_color = Color( 0.721569, 0.960784, 0.960784, 1 )
custom_colors/font_color_hover = Color( 0.870588, 1, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 0.0745098, 0.329412, 0.235294, 1 )
enabled_focus_mode = 0
text = "New game"

[node name="PickLevelButton" type="ToolButton" parent="MarginContainer/VBoxContainer/CenterContainer/ButtonList"]
margin_top = 86.0
margin_right = 156.0
margin_bottom = 125.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.172549, 0.203922, 0.309804, 1 )
custom_colors/font_color = Color( 0.721569, 0.960784, 0.960784, 1 )
custom_colors/font_color_hover = Color( 0.870588, 1, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 0.0745098, 0.329412, 0.235294, 1 )
enabled_focus_mode = 0
text = "Pick a level"

[node name="ExitButton" type="ToolButton" parent="MarginContainer/VBoxContainer/CenterContainer/ButtonList"]
margin_top = 129.0
margin_right = 156.0
margin_bottom = 168.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.172549, 0.203922, 0.309804, 1 )
custom_colors/font_color = Color( 0.721569, 0.960784, 0.960784, 1 )
custom_colors/font_color_hover = Color( 0.870588, 1, 0.839216, 1 )
custom_colors/font_color_pressed = Color( 0.0745098, 0.329412, 0.235294, 1 )
enabled_focus_mode = 0
text = "Exit game"

[node name="LevelList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
visible = false
margin_left = 256.0
margin_top = 254.0
margin_right = 256.0
margin_bottom = 254.0

[node name="NewGameDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -35.0
margin_right = 104.0
margin_bottom = 40.0
window_title = "Start new game"
dialog_text = "This will delete your current save file. Are you sure?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/ButtonList/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/ButtonList/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/ButtonList/PickLevelButton" to="." method="_on_PickLevelButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/ButtonList/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="confirmed" from="NewGameDialog" to="." method="_on_NewGameDialog_confirmed"]
